<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp">

    <ImageView
        android:id="@+id/poster_bg"
        android:layout_width="match_parent"
        android:contentDescription="@string/profile_background"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/scrim_overlay_iv"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_top_bottom_user_email"
        android:layout_marginLeft="@dimen/margin_start_user_email"
        android:layout_marginStart="@dimen/margin_start_user_email"
        android:layout_marginTop="@dimen/margin_top_bottom_user_email"
        android:contentDescription="@string/user_email"
        android:gravity="start"
        android:textColor="@android:color/white"
        android:textSize="@dimen/user_email_text_size"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/tv_email"
        android:layout_marginLeft="@dimen/margin_start_user_email"
        android:layout_marginStart="@dimen/margin_start_user_email"
        android:contentDescription="@string/user_name"
        android:gravity="start"
        android:onClick="login"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="@dimen/user_name_text_size"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_dp"
        android:layout_width="@dimen/user_dp_dimens"
        android:layout_height="@dimen/user_dp_dimens"
        android:layout_above="@id/tv_name"
        android:layout_margin="@dimen/margin_user_dp"
        android:contentDescription="@string/user_image"
        android:src="@drawable/profile"/>


</RelativeLayout>