<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.fe.wallpie.activity.DetailActivity"
    tools:showIn="@layout/activity_detail"
    >

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"

     android:orientation="vertical">

     <LinearLayout
         android:elevation="8dp"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:layout_width="match_parent"
         android:background="@android:color/white"
         android:paddingStart="@dimen/activity_horizontal_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingEnd="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:layout_height="wrap_content">

         <Button
             android:id="@+id/btn_download"
             android:text="@string/download"
             android:layout_weight="1"
             android:layout_marginEnd="@dimen/download_set_margin_left_right"
             android:layout_width="0dp"
             android:textColor="@color/colorPrimary"
             android:background="@drawable/btn_download_bg"
             android:layout_height="@dimen/btn_height_download_set"

             android:paddingRight="@dimen/download_set_margin_left_right"
             android:layout_marginRight="@dimen/download_set_margin_left_right"/>
         <Button
             android:id="@+id/btn_set_wallpaper"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:background="@drawable/btn_set_wallpaper_bg"
             android:textColor="@android:color/white"
             android:layout_marginStart="@dimen/download_set_margin_left_right"
             android:text="@string/set_as_wallpaper"
             android:layout_height="@dimen/btn_height_download_set"
             android:layout_marginLeft="@dimen/download_set_margin_left_right"/>


     </LinearLayout>

     <LinearLayout
         android:elevation="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingStart="@dimen/activity_horizontal_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingEnd="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingBottom="10dp"
         android:background="@android:color/white">
         <ToggleButton
             android:id="@+id/iv_like"
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:layout_marginLeft="10dp"
             android:layout_marginStart="10dp"
             android:adjustViewBounds="true"
             android:textOn=""
             android:textOff=""
             android:focusable="false"
             android:background="@android:color/transparent"
             android:button="@drawable/like_drawable_toggle"/>
         <TextView
             android:layout_width="match_parent"
             tools:text="You liked it"
             android:layout_height="wrap_content"
             android:id="@+id/iv_like_info"/>


     </LinearLayout>
     <LinearLayout
         android:elevation="8dp"
         android:id="@+id/like_heart_layout"
         android:layout_width="match_parent"
         android:background="@android:color/white"
         android:paddingStart="@dimen/activity_horizontal_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingEnd="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:layout_height="wrap_content">
         <View
             android:background="@color/grey"
             android:layout_width="match_parent"
             android:layout_height="1dp"/>
     </LinearLayout>
     <RelativeLayout
         android:paddingStart="@dimen/activity_horizontal_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingEnd="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:elevation="8dp"
         android:layout_width="match_parent"
         android:background="@android:color/white"
         android:paddingTop="15dp"
         android:paddingBottom="15dp"
         android:layout_height="wrap_content">
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/prof_pic_iv"
             android:layout_width="64dp"
             android:layout_height="64dp"/>
        <LinearLayout
            android:layout_toRightOf="@id/prof_pic_iv"
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:baselineAligned="true"
            android:paddingStart="@dimen/padding_left_photographr_details"

            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/padding_left_photographr_details">
            <TextView
                android:id="@+id/photograpger_name_tv"
                tools:text="Farmaan"
                android:textColor="@color/colorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/photograpger_username"
                tools:text="instagram"
                android:layout_marginTop="5dp"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
        </LinearLayout>
         <TextView
             android:layout_marginTop="@dimen/photographer_bottom_top_margin"
             android:layout_marginBottom="@dimen/photographer_bottom_top_margin"
             android:layout_below="@id/prof_pic_iv"
             android:id="@+id/photograpger_bio"
             android:textSize="12sp"
             android:textColor="@android:color/black"
             tools:text="I'm a designer and the founder of RetroSupply. RetroSupply offers a suite of high-quality photos, templates, brushes, actions, plug-ins and more. Get 9 best-selling RetroSupply goods free here: http://bit.ly/Free-RetroSupply-Goods "
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
         <View
             android:layout_below="@id/photograpger_bio"
             android:background="@color/grey"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </RelativeLayout>

     <LinearLayout
         android:id="@+id/ads_layout"
         android:background="@android:color/white"
         android:layout_width="match_parent"
         android:layout_marginTop="@dimen/section_margin"
         android:elevation="8dp"
         android:layout_height="wrap_content">
         <com.google.android.gms.ads.NativeExpressAdView

             android:id="@+id/native_ad"
             ads:adSize="360x132"
             ads:adUnitId="@string/test_add"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             >
         </com.google.android.gms.ads.NativeExpressAdView>
     </LinearLayout>


     <RelativeLayout
         android:elevation="8dp"
         android:layout_marginTop="@dimen/section_margin"
         android:layout_width="match_parent"
         android:paddingStart="@dimen/activity_horizontal_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingEnd="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:background="@android:color/white"
         android:layout_height="wrap_content">

         <TextView
             android:id="@+id/more_recommendation"
             android:text="More"
             android:layout_width="wrap_content"
             android:paddingTop="@dimen/section_margin"
             android:textAppearance="@style/TextAppearance.AppCompat.Menu"
             android:layout_height="wrap_content"
             tools:ignore="RtlCompat"
             android:layout_alignParentTop="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"/>

         <TextView
             android:id="@+id/more_from_photographer"
             android:layout_width="wrap_content"
             android:paddingTop="@dimen/section_margin"
             android:textSize="18sp"
             tools:text="More from Farmaan"
             android:textAppearance="@style/TextAppearance.AppCompat.Display3"
             android:layout_height="wrap_content"
             tools:ignore="RtlCompat"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"/>

     </RelativeLayout>
     <android.support.v7.widget.RecyclerView
         android:elevation="8dp"
         android:id="@+id/recommendation_rv"
         android:background="@android:color/white"
         android:paddingTop="@dimen/margin_top_rv_recommendation"
         android:paddingStart="@dimen/activity_horizontal_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingEnd="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">

     </android.support.v7.widget.RecyclerView>
 </LinearLayout>
</android.support.v4.widget.NestedScrollView>
